# spectic

./: README.md  pyproject.toml  readme.md  ruff.toml  setup.py
spectic/: __init__.py  __init__.pyi  _core.py  _hooks.py  exceptions.py  mypy_plugin.py  plugin.py  pycharm.pyi  pylance_plugin.py  struct.py  struct.pyi  utils.py
spectic/types/: __init__.py  __init__.pyi  derived.py  derived.pyi  secrets.py
tests/: test_sceptic.py
